--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blackjack Spill</title>
 
-    <link rel="stylesheet" href="blackjackgame.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -19,12 +19,12 @@
             <p id="messageEl">Klikk på start runden for å spille...</p>
             <p id="cardEl">Kort:</p>
             <p id="sumEl">Sum:</p>
-            <script src="blackjackgame.js"></script>
+            <script src="script.js"></script>
         </div>
 
         <button onclick="startGame()">Start Spillet:</button>
         <button onclick="newCard()">Nytt Kort?</button>
-        <script src="blackjackgame.js"></script>
+        <script src="script.js"></script>
 
     </section>
 </body>
