--- a/index.html
+++ b/index.html
@@ -16,16 +16,23 @@
         <h1 class="bhead">Blackjack</h1>
 
         <div class="bjp">
-            <p id="messageEl">Klikk på start runden for å spille...</p>
-            <p id="cardEl">Kort:</p>
-            <p id="sumEl">Sum:</p>
+            <p id="messageEl">Klikk på start Spillet for å spille...</p>
+            <p id="dealersKort">Dealeren Sine Kort: ???</p>
+            <p id="dealersSum">Dealeren Sin Sum: ???</p>
+            <p id="cardEl">Kort: ???</p>
+            <p id="sumEl">Sum: ???</p>
+
             <script src="script.js"></script>
         </div>
 
-        <button onclick="startGame()">Start Spillet:</button>
-        <button onclick="newCard()">Nytt Kort?</button>
+        <button onclick="startGame()" class="spillbut">Start Spillet:</button>
+        <div class="button-container">
+            <button onclick="newCard()">Nytt Kort?</button>
+            <button onclick="dealersTur()">Stå</button>
+        </div>
         <script src="script.js"></script>
 
     </section>
 </body>
+
 </html>
