--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <p id="messageEl">Klikk på start Spillet for å spille...</p>
             <p id="dealersKort">Dealeren Sine Kort: ???</p>
             <p id="dealersSum">Dealeren Sin Sum: ???</p>
-            <p id="cardEl">Kort: ???</p>
-            <p id="sumEl">Sum: ???</p>
+            <p id="cardEl">Dine Kort: ???</p>
+            <p id="sumEl">Din Sum: ???</p>
 
             <script src="script.js"></script>
         </div>
