--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 
         <h1 class="bhead">Blackjack</h1>
 
+        <div class="scoreboard">
+            <div class="scorediv">
+                <h1 id="spillScore">Spiller Score:</h1>
+            </div>
+            <div class="dealerdiv">
+                <h1 id="dealerScore">Dealers Score:</h1>
+            </div>
+        </div>
+
         <div class="bjp">
             <p id="messageEl">Klikk på start Spillet for å spille...</p>
             <p id="dealersKort">Dealeren Sine Kort: ???</p>
