--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
         <div class="scoreboard">
             <div class="scorediv">
-                <h1 id="spillScore">Spiller Score:</h1>
+                <h1 id="spillSeiere">Spiller Seiere: 0</h1>
             </div>
             <div class="dealerdiv">
-                <h1 id="dealerScore">Dealers Score:</h1>
+                <h1 id="dealerSeiere">Dealers Seiere: 0</h1>
             </div>
         </div>
 
